--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,14 +13,30 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 
-    <include
-        android:id="@+id/include"
-        layout="@layout/content_main"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/toolbarTop"/>
+        android:layout_height="match_parent"
+        android:layout_below="@+id/toolbarTop"
+        android:layout_marginTop="0dp"
+        android:orientation="vertical">
 
-    <include
-        layout="@layout/view_loader"/>
+        <android.support.constraint.ConstraintLayout
+            android:id="@+id/bnt1"
+            android:layout_width="match_parent"
+            android:layout_height="40dp">
+
+            <TextView
+                android:id="@+id/textView2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="TextView"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+        </android.support.constraint.ConstraintLayout>
+    </LinearLayout>
+
+
 
 </RelativeLayout>
