--- a/app/src/main/res/layout/item_result.xml
+++ b/app/src/main/res/layout/item_result.xml
@@ -11,6 +11,8 @@
         android:layout_toStartOf="@+id/ans_icon"
         android:padding="15dp">
 
+
+
         <TextView
             android:id="@+id/question_text"
             android:layout_width="match_parent"
@@ -56,6 +58,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:id="@+id/given_ans_textd"
             android:layout_below="@id/your_ans_container"
             android:layout_marginTop="4dp"
             android:orientation="horizontal">
@@ -78,6 +81,13 @@
 
         </LinearLayout>
 
+        <TextView
+            android:id="@+id/image_ans"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/given_ans_textd"
+
+             />
     </RelativeLayout>
 
     <ImageView
