--- a/app/src/main/res/layout/activity_quiz.xml
+++ b/app/src/main/res/layout/activity_quiz.xml
@@ -23,53 +23,7 @@
         android:paddingTop="10dp">
 
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_toStartOf="@+id/btnSpeaker"
-            android:orientation="horizontal">
 
-            <ImageView
-                android:id="@+id/firstLife"
-                android:layout_width="22dp"
-                android:layout_height="22dp"
-                android:contentDescription="@string/app_name"
-                android:padding="3dp"
-                android:src="@drawable/ic_heart" />
-
-            <ImageView
-                android:id="@+id/secondLife"
-                android:layout_width="22dp"
-                android:layout_height="22dp"
-                android:contentDescription="@string/app_name"
-                android:padding="3dp"
-                android:src="@drawable/ic_heart" />
-
-            <ImageView
-                android:id="@+id/thirdLife"
-                android:layout_width="22dp"
-                android:layout_height="22dp"
-                android:contentDescription="@string/app_name"
-                android:padding="3dp"
-                android:src="@drawable/ic_heart" />
-
-            <ImageView
-                android:id="@+id/fourthLife"
-                android:layout_width="22dp"
-                android:layout_height="22dp"
-                android:contentDescription="@string/app_name"
-                android:padding="3dp"
-                android:src="@drawable/ic_heart" />
-
-            <ImageView
-                android:id="@+id/fifthLife"
-                android:layout_width="22dp"
-                android:layout_height="22dp"
-                android:contentDescription="@string/app_name"
-                android:padding="3dp"
-                android:src="@drawable/ic_heart" />
-
-        </LinearLayout>
 
         <ImageButton
             android:id="@+id/btnSpeaker"
@@ -84,13 +38,13 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/btnSpeaker"
+            android:layout_marginTop="-34dp"
             android:layout_marginBottom="4dp"
-            android:layout_marginTop="4dp"
             android:lineSpacingMultiplier="1.1"
             android:textSize="17sp"
             tools:text="@string/quiz_question_title" />
 
-        <TextView
+        <WebView
             android:id="@+id/tvQuestionText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
