--- a/app/src/main/res/layout/item_category_recycler.xml
+++ b/app/src/main/res/layout/item_category_recycler.xml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="180dp"
-    android:layout_marginEnd="14dp"
-    android:layout_marginTop="14dp"
-    android:gravity="center"
-    android:id="@+id/lytContainer"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:background="@color/red">
+    android:id="@+id/lytContainer"
+    android:layout_width="match_parent"
+    android:layout_height="60dp"
+    android:layout_marginTop="14dp"
+    android:layout_marginEnd="14dp"
+    android:gravity="center">
 
     <RelativeLayout
         android:layout_width="wrap_content"
@@ -21,24 +20,9 @@
             android:layout_centerHorizontal="true"
             android:background="@drawable/circular_white_stroke"
             android:gravity="center"
-            android:textColor="@color/white"
+            android:textColor="@color/md_grey_700"
             android:textStyle="bold"
-            tools:text="1"/>
-
-        <TextView
-            android:id="@+id/titleText"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/categoryId"
-            android:layout_marginLeft="8dp"
-            android:layout_marginRight="8dp"
-            android:ellipsize="end"
-            android:gravity="center"
-            android:maxLines="2"
-            android:minLines="2"
-            android:textColor="@color/white"
-            android:textSize="15sp"
-            tools:text="First test"/>
+            tools:text="1" />
 
     </RelativeLayout>
 
