--- a/app/src/main/res/layout/activity_score_card.xml
+++ b/app/src/main/res/layout/activity_score_card.xml
@@ -201,7 +201,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/prompt_container"
-                android:layout_margin="15dp"
+                android:layout_marginTop="15dp"
+                android:layout_marginBottom="15dp"
                 android:background="@color/white" />
 
         </RelativeLayout>
